# amp-server

./: .gitignore  Cargo.toml  LICENSE  README.md  bacon.toml  mise.toml  proxy_config.yaml
api/: Cargo.toml
api/src/: error.rs  lib.rs
api/src/health/: mod.rs
api/src/proxy/: config.rs  mod.rs  service.rs
api/src/telemetry/: mod.rs
api/src/user/: internal.rs  mod.rs
src/: main.rs
