[package]
name = "amp-server-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# HTTP client and streaming
reqwest = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }

# Utility libraries
ulid = { workspace = true }
chrono = { workspace = true }

